# dupfiles-cpp

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.bat  conanfile.txt
dupfiles/: CMakeLists.txt  dupfiles.cpp  file_hash.hpp  file_identity.hpp  hash_digest.hpp  mmap.cpp  mmap.hpp  mmap_win32.cpp
dupfiles/sha512/: sha512.cpp  sha512.hpp
finddup/: main.cpp
include/: dupfiles.hpp
src/cli/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  dupfiles.cpp  file_identity.hpp
