find_package(Boost REQUIRED system filesystem)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(BEFORE SYSTEM ${CMAKE_SOURCE_DIR}/deps/openssl/include)
add_library(dupfiles STATIC dupfiles.cpp mmap.cpp)
target_link_libraries(dupfiles ${Boost_LIBRARIES} ${CMAKE_SOURCE_DIR}/deps/openssl/libcrypto.a)
