find_package(Boost REQUIRED system filesystem)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(BEFORE SYSTEM ${CMAKE_SOURCE_DIR}/deps/openssl/include)
set(MMAP_SOURCE mmap.cpp)
if(WIN32)
    set(MMAP_SOURCE mmap_win32.cpp)
endif()
add_library(dupfiles STATIC dupfiles.cpp ${MMAP_SOURCE})
target_link_libraries(dupfiles ${Boost_LIBRARIES} ${CMAKE_SOURCE_DIR}/deps/openssl/libcrypto.a)
